--- a/SolidOpt/trunk/src/Services/Loader/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Loader/src/CMakeLists.txt
@@ -5,11 +5,11 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Loader
+  SolidOpt.Loader.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
-  SolidOpt.Loader
+  SolidOpt.Loader.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   )
