--- a/SolidOpt/trunk/src/Services/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/CMakeLists.txt
@@ -5,7 +5,7 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Services
+  SolidOpt.Services.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
