--- a/SolidOpt/trunk/src/Services/Subsystems/HetAccess/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Subsystems/HetAccess/src/CMakeLists.txt
@@ -5,7 +5,7 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Services.Subsystems.HetAccess
+  SolidOpt.Services.Subsystems.HetAccess.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/Exporters/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/Importers/*.cs
