--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/CallGraph/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/CallGraph/src/CMakeLists.txt
@@ -5,12 +5,12 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Services.Transformations.CodeModel.CallGraph
+  SolidOpt.Services.Transformations.CodeModel.CallGraph.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
-  SolidOpt.Services.Transformations.CodeModel.CallGraph
+  SolidOpt.Services.Transformations.CodeModel.CallGraph.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   )
