--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CFGtoTAC/test/CMakeLists.txt
@@ -5,12 +5,12 @@
 ##
 
 csharp_add_test_library(
-  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.Test
+  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.Test.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
-  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.Test
+  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.Test.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.dll
