--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoAST/test/TestCases/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoAST/test/TestCases/CMakeLists.txt
@@ -5,6 +5,6 @@
 ##
 
 csharp_add_test_case(
-  SolidOpt.Services.Transformations.MultiModel.ILtoAST.Test
+  SolidOpt.Services.Transformations.MultiModel.ILtoAST.Test.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
