--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/src/CMakeLists.txt
@@ -5,12 +5,12 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Services.Transformations.MultiModel.ILtoCG
+  SolidOpt.Services.Transformations.MultiModel.ILtoCG.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
-  SolidOpt.Services.Transformations.MultiModel.ILtoCG
+  SolidOpt.Services.Transformations.MultiModel.ILtoCG.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.CallGraph.dll
   # Monodevelop 2.8 compatibility
