--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/test/TestCases/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/test/TestCases/CMakeLists.txt
@@ -5,6 +5,6 @@
 ##
 
 csharp_add_test_case(
-  SolidOpt.Services.Transformations.Optimizations.AST.MethodInline.Test
+  SolidOpt.Services.Transformations.Optimizations.AST.MethodInline.Test.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   )
