--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/IL/MethodInline/src/CMakeLists.txt
@@ -5,12 +5,12 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Services.Transformations.Optimizations.IL.MethodInline
+  SolidOpt.Services.Transformations.Optimizations.IL.MethodInline.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
-  SolidOpt.Services.Transformations.Optimizations.IL.MethodInline
+  SolidOpt.Services.Transformations.Optimizations.IL.MethodInline.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.Optimizations.Annotations.dll
   # Monodevelop 2.8 compatibility
