--- a/Tools/SolidReflector/trunk/plugins/ILVisualizer/ILVisualizer.csproj
+++ b/Tools/SolidReflector/trunk/plugins/ILVisualizer/ILVisualizer.csproj
@@ -11,24 +11,24 @@
     <AssemblyName>ILVisualizer</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>True</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <ConsolePause>false</ConsolePause>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -39,14 +39,15 @@
   <ItemGroup>
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
-      <Package>gtk-sharp-2.0</Package>
-    </Reference>
-    <Reference Include="MonoDevelop.Dock">
-      <HintPath>..\..\..\..\..\..\Experimental\MonoDocking\MonoDocking\bin\Debug\MonoDevelop.Dock.dll</HintPath>
     </Reference>
     <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
-      <Package>gtk-sharp-2.0</Package>
+    </Reference>
+    <Reference Include="MonoDevelop.Dock">
+      <HintPath>..\..\src\vendors\MonoDevelopDock\MonoDevelop.Dock.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil">
+      <HintPath>..\..\src\vendors\SolidOpt-build\lib\Mono.Cecil.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -55,16 +56,12 @@
       <Name>SolidReflector</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\vendors\SolidOpt-build\src\Services\SolidOpt.Services.csproj">
-      <Project>{E811F1C8-582F-4313-8B32-3E821AE23F9A}</Project>
+      <Project>{990B2FCC-86B8-4813-81E1-30E02BA3182C}</Project>
       <Name>SolidOpt.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\AssemblyBrowser\AssemblyBrowser.csproj">
       <Project>{BD74C0D8-547A-448F-B7FD-AD4FA077A497}</Project>
       <Name>AssemblyBrowser</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\vendors\SolidOpt\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
-      <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
-      <Name>Mono.Cecil</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
