--- a/Tools/SolidReflector/trunk/src/Properties/app.config
+++ b/Tools/SolidReflector/trunk/src/Properties/app.config
@@ -1,6 +1,52 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <system.diagnostics>
-        <assert assertuienabled="true" />
-    </system.diagnostics>
+  <!--
+   The .NET 2.0 build of the console runner only 
+   runs under .NET 2.0 or higher. The setting
+   useLegacyV2RuntimeActivationPolicy only applies 
+   under .NET 4.0 and permits use of mixed mode 
+   assemblies, which would otherwise not load 
+   correctly.
+  -->
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <!-- Comment out the next line to force use of .NET 4.0 -->
+    <supportedRuntime version="v2.0.50727" />
+    <supportedRuntime version="v4.0.30319" />
+  </startup>
+
+  <runtime>
+    <!-- Ensure that test exceptions don't crash NUnit -->
+    <legacyUnhandledExceptionPolicy enabled="1" />
+
+    <!-- Run partial trust V2 assemblies in full trust under .NET 4.0 -->
+    <loadFromRemoteSources enabled="true" />
+
+    <!-- Look for addins in the addins directory for now -->
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="plugins;addins;lib"/>
+    </assemblyBinding>
+
+  </runtime>
+
+  <system.diagnostics>
+    <assert assertuienabled="true" />
+  </system.diagnostics>
+
+  <!-- Native library compatibility dllmap (MONO only) -->
+  <dllmap os="!windows,osx" dll="libglib-2.0-0.dll" target="libglib-2.0.so.0"/>
+  <dllmap os="!windows,osx" dll="libgobject-2.0-0.dll" target="libgobject-2.0.so.0"/>
+  <dllmap os="!windows,osx" dll="libatk-1.0-0.dll" target="libatk-1.0.so.0"/>
+  <dllmap os="!windows,osx" dll="libgtk-win32-2.0-0.dll" target="libgtk-x11-2.0.so.0"/>
+  <dllmap os="!windows,osx" dll="libgdk-win32-2.0-0.dll" target="libgdk-x11-2.0.so.0"/>
+  <dllmap os="!windows,osx" dll="libpango-1.0-0.dll" target="libpango-1.0.so.0"/>
+  <dllmap os="!windows,osx" dll="libpangocairo-1.0-0.dll" target="libpangocairo-1.0.so.0"/>
+
+  <dllmap os="osx" dll="libglib-2.0-0.dll" target="libglib-2.0.0.dylib"/>
+  <dllmap os="osx" dll="libgobject-2.0-0.dll" target="libgobject-2.0.0.dylib"/>
+  <dllmap os="osx" dll="libatk-1.0-0.dll" target="libatk-1.0.0.dylib"/>
+  <dllmap os="osx" dll="libgtk-win32-2.0-0.dll" target="libgtk-quartz-2.0.0.dylib"/>
+  <dllmap os="osx" dll="libgdk-win32-2.0-0.dll" target="libgdk-quartz-2.0.0.dylib"/>
+  <dllmap os="osx" dll="libpango-1.0-0.dll" target="libpango-1.0.0.dylib"/>
+  <dllmap os="osx" dll="libpangocairo-1.0-0.dll" target="libpangocairo-1.0.0.dylib"/>
+
 </configuration>
