Make the setenv.sh configurable. This will make SolidReflector buildable and runnable on Linux (Unix?).

--- a/Tools/SolidReflector/trunk/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/CMakeLists.txt
@@ -83,10 +83,14 @@ csharp_resolve_dependencies()
 # Save solution
 csharp_save_vs_solution(SolidReflector)
 
-#Give the user some instructions how to proceed.
+#Configure the setenv script.
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/setenv.sh.in
+  ${PROJECT_BINARY_DIR}/setenv.sh
+  @ONLY
+  )
 
+#Give the user some instructions how to proceed.
 MESSAGE(STATUS "==============================================================")
-MESSAGE(STATUS "== Please run:") 
-MESSAGE(STATUS "== source ${CMAKE_SOURCE_DIR}/setenv.sh") 
-MESSAGE(STATUS "== make") 
+MESSAGE(STATUS "==           Please run: source setenv.sh && make           ==") 
 MESSAGE(STATUS "==============================================================")
