--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/src/CMakeLists.txt
@@ -22,4 +22,9 @@ csharp_add_dependencies(
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Cecil.Decompiler.dll
+  System.Core.dll
+  )
+csharp_add_project_meta(
+  SolidOpt.Services.Transformations.Optimizations.AST.MethodInline.dll
+  "Framework" "4.0"
   )
