--- a/SolidOpt/trunk/src/Services/Transformations/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/test/CMakeLists.txt
@@ -22,5 +22,5 @@ csharp_add_dependencies(
   )
 csharp_add_project_meta(
   SolidOpt.Services.Transformations.Test.dll
-  "Framework" "4.0"
+  "TargetFrameworkVersion" "4.0"
   )
