--- a/Tools/SolidReflector/trunk/src/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/src/CMakeLists.txt
@@ -20,8 +20,12 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/MonoDevelop.Dock.dll
   Mono.Posix.dll
   # GAC
-  gtk-sharp.dll
-  gdk-sharp.dll
+  "gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
   )
 
 # Configure application config
