--- a/Tools/SolidReflector/trunk/setenv.sh.in
+++ b/Tools/SolidReflector/trunk/setenv.sh.in
@@ -12,6 +12,7 @@ fi
 
 if [[ $platform == 'linux' ]]; then
     export MONO_PATH="$MONO_PATH:/usr/lib/cli/gtk-sharp-2.0/:/usr/lib/cli/gdk-sharp-2.0/:/usr/lib/cli/pango-sharp-2.0/"
+    export MONO_PATH="$MONO_PATH:/usr/lib/cli/glib-sharp-2.0/:/usr/lib/cli/glade-sharp-2.0/:/usr/lib/cli/atk-sharp-2.0/"
     alias SolidReflector.exe='mono @CMAKE_RUNTIME_OUTPUT_DIR@/SolidReflector.exe'
 elif [[ $platform == 'macos' ]]; then
     export DYLD_FALLBACK_LIBRARY_PATH="$DYLD_FALLBACK_LIBRARY_PATH:/Library/Frameworks/Mono.framework/Versions/Current/lib:/usr/lib"
