Add StartupProject meta support. Add AssemblyInfo.cs meta support.

--- a/SolidOpt/trunk/cmake/AssemblyInfo.cs.in
+++ b/SolidOpt/trunk/cmake/AssemblyInfo.cs.in
@@ -16,9 +16,9 @@ using System.Runtime.CompilerServices;
 // The assembly version has following format: Major.Minor.Build.Revision
 [assembly: AssemblyVersion("@SolidOpt_Major@.@SolidOpt_Minor@.@SolidOpt_Revision@")]
 // TODO: Add the target name
-[assembly: AssemblyTitle("@Project_Title@")]
+[assembly: AssemblyTitle("@VAR_Project_Title@")]
 [assembly: AssemblyCopyright("Copyright (c) 2009-@SolidOpt_LastYear@ SolidOpt.org")]
-[assembly: AssemblyDescription("@Project_Description@")]
+[assembly: AssemblyDescription("@VAR_Project_Description@")]
 [assembly: AssemblyCompany("SolidOpt.org")]
 [assembly: AssemblyFileVersion("@SolidOpt_Major@.@SolidOpt_Minor@.0.@SolidOpt_Revision@")]
 [assembly: AssemblyCulture("")]
@@ -29,4 +29,3 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyDelaySign(false)]
 [assembly: AssemblyKeyName("")]
 [assembly: AssemblyKeyFile("")]
-
