--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCG/src/CMakeLists.txt
@@ -22,5 +22,5 @@ csharp_add_dependencies(
   )
 csharp_add_project_meta(
   SolidOpt.Services.Transformations.MultiModel.ILtoCG.dll
-  "TargetFrameworkVersion" "4.0"
+  "TargetFrameworkVersion" "v4.0"
   )
