Added doxygen support for generating documentation in build/doc/doxygen/ folder using "make doc"

--- a/Tools/SolidReflector/trunk/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/CMakeLists.txt
@@ -78,8 +78,8 @@ add_subdirectory(plugins)
 # FIXME:
 # This is a bit hackish way, but it adds support for configuring just docs
 # it is needed by our online doxygen system.
-###set(DOXYGEN_INPUT_DIR ${CMAKE_SOURCE_DIR})
-###add_subdirectory(doc)
+set(DOXYGEN_INPUT_DIR ${CMAKE_SOURCE_DIR})
+add_subdirectory(doc)
 
 # Resolve all target dependencies
 csharp_resolve_dependencies()
