--- a/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Optimizations/AST/MethodInline/test/CMakeLists.txt
@@ -25,4 +25,9 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/nunit.framework.dll
   )
 
+csharp_add_project_meta(
+  SolidOpt.Services.Transformations.Optimizations.AST.MethodInline.Test.dll
+  "TargetFrameworkVersion" "v4.0"
+  )
+
 add_subdirectory(TestCases)
