--- a/SolidOpt/trunk/cmake/SolutionName-v11.sln.in
+++ b/SolidOpt/trunk/cmake/SolutionName-v11.sln.in
@@ -22,8 +22,7 @@ Microsoft Visual Studio Solution File, Format Version 11.00
   GlobalSection(NestedProjects) = preSolution
 @VAR_Solution_NestedProjects@  EndGlobalSection
   GlobalSection(MonoDevelopProperties) = preSolution
-    StartupItem = @VAR_Solution_StartupItem@
-    Policies = $0
+@VAR_Solution_StartupItem@    Policies = $0
     $0.TextStylePolicy = $1
     $1.FileWidth = 100
     $1.TabWidth = 2
