--- a/SolidOpt/trunk/cmake/BuildInfo.cs.in
+++ b/SolidOpt/trunk/cmake/BuildInfo.cs.in
@@ -2,5 +2,7 @@ namespace SolidOpt.BuildInformation {
   public static class BuildInfo {
     public const string LibraryOutputDir = "@CMAKE_LIBRARY_OUTPUT_DIR@";
     public const string ExecutableOutputDir = "@CMAKE_RUNTIME_OUTPUT_DIR@";
+    public const string ILASMCompiler = "@ILASM@";
+    public const string CSCCompiler = "@CSC@";
   }
 }
