Implement delayed strong name signing.
We have a RSA signing of the assemblies. There is a public key which is uploaded
on the svn available to everyone, and before release they will be signed by the
private key which will be in some hidden place.

Note this required signing Cecil.Decompiler (one of our vendors) and its friends, too.

--- a/SolidOpt/trunk/cmake/AssemblyInfo.cs.in
+++ b/SolidOpt/trunk/cmake/AssemblyInfo.cs.in
@@ -26,6 +26,6 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyProduct("@PROJECT_NAME@")]
 [assembly: AssemblyInformationalVersion("@SolidOpt_Major@.@SolidOpt_Minor@.0.@SolidOpt_Revision@")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyDelaySign(false)]
+[assembly: AssemblyDelaySign(true)]
 [assembly: AssemblyKeyName("")]
-[assembly: AssemblyKeyFile("")]
+[assembly: AssemblyKeyFile("@CMAKE_SOURCE_DIR@/public.snk")]
