--- a/SolidOpt/trunk/src/Services/Transformations/test/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/test/CMakeLists.txt
@@ -7,7 +7,7 @@
 csharp_add_library(
   SolidOpt.Services.Transformations.Test.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
-  #${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
   SolidOpt.Services.Transformations.Test.dll
