Not specifying a project defaults to C/C++, which does unnecessary checks.

--- a/Tools/SampleTool/trunk/doc/CMakeLists.txt
+++ b/Tools/SampleTool/trunk/doc/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Those two are relevant when configuring just docs standalone
-project(SampleTool)
+project(SampleTool NONE)
 cmake_minimum_required(VERSION 2.6.2)
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
