Create new plugin ImportExport. Add the new directory in the /plugins/CMakeLists.txt CMakeLists file. Add the dll to Plugins.env.in and set two new options to the file menu - Import & Export.

--- a/Tools/DataMorphose/trunk/plugins/ImportExport/CMakeLists.txt
+++ b/Tools/DataMorphose/trunk/plugins/ImportExport/CMakeLists.txt
@@ -4,4 +4,5 @@
 ## For further details see the nearest License.txt
 ##
 
-add_subdirectory(ImportExport)
+add_subdirectory(src)
+#add_subdirectory(test)
