--- a/Tools/SolidReflector/trunk/setenv.sh.in
+++ b/Tools/SolidReflector/trunk/setenv.sh.in
@@ -13,11 +13,11 @@ fi
 if [[ $platform == 'linux' ]]; then
     export MONO_PATH="$MONO_PATH:/usr/lib/cli/gtk-sharp-2.0/:/usr/lib/cli/gdk-sharp-2.0/:/usr/lib/cli/pango-sharp-2.0/"
     export MONO_PATH="$MONO_PATH:/usr/lib/cli/glib-sharp-2.0/:/usr/lib/cli/glade-sharp-2.0/:/usr/lib/cli/atk-sharp-2.0/"
-    alias DataMorphose.exe='mono @CMAKE_RUNTIME_OUTPUT_DIR@/DataMorphose.exe'
+    alias SolidReflector.exe='mono @CMAKE_RUNTIME_OUTPUT_DIR@/SolidReflector.exe'
 elif [[ $platform == 'macos' ]]; then
     export DYLD_FALLBACK_LIBRARY_PATH="$DYLD_FALLBACK_LIBRARY_PATH:/Library/Frameworks/Mono.framework/Versions/Current/lib:/usr/lib"
     export MONO_PATH="$MONO_PATH:/Library/Frameworks/Mono.framework/Versions/Current/lib/mono/gtk-sharp-2.0:/Library/Frameworks/Mono.framework/Versions/Current/lib"
-    alias DataMorphose.exe='mono @CMAKE_RUNTIME_OUTPUT_DIR@/DataMorphose.exe'
+    alias SolidReflector.exe='mono @CMAKE_RUNTIME_OUTPUT_DIR@/SolidReflector.exe'
 fi
 # FIXME: Remove when we merge with SolidOpt v0.2
 ln -s @CMAKE_SOURCE_DIR@/src/vendors/SolidOpt/public.snk @CMAKE_SOURCE_DIR@/public.snk
