Backport r996 from branch.

--- a/SolidOpt/trunk/src/BuildInformation/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/BuildInformation/src/CMakeLists.txt
@@ -13,5 +13,5 @@ configure_file(
 csharp_add_library(
   SolidOpt.BuildInformation.dll
   ${CMAKE_CURRENT_BINARY_DIR}/*.cs
-  #${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
+  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
