Backport r998 from branch.

--- a/SolidOpt/trunk/cmake/ProjectName-v11.csproj.in
+++ b/SolidOpt/trunk/cmake/ProjectName-v11.csproj.in
@@ -40,6 +40,8 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
     <GenerateDocumentation>True</GenerateDocumentation>
+    <!-- We don't want warnings for undocumented methods -->
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 <!--
