Move the build information as a part of the cmake folder. That will help when we use the build system for external projects.

--- a/SolidOpt/trunk/CMakeLists.txt
+++ b/SolidOpt/trunk/CMakeLists.txt
@@ -89,6 +89,7 @@ ENDIF(BUILD_TESTING)
 
 # ...
 add_subdirectory(src)
+add_subdirectory(cmake/BuildInformation)
 # FIXME:
 # This is a bit hackish way, but it adds support for configuring just docs
 # it is needed by our online doxygen system.
