Move the Services's source files in src, for consistency and better reuse. For example, DataMorphose is interested only in reusing the SO's plugin's system.

--- a/SolidOpt/trunk/src/Services/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/CMakeLists.txt
@@ -4,11 +4,6 @@
 ## For further details see the nearest License.txt
 ##
 
-csharp_add_library(
-  SolidOpt.Services.dll
-  ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
-  ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
-  )
-
+add_subdirectory(src)
 add_subdirectory(Subsystems)
 add_subdirectory(Transformations)
