--- a/SolidOpt/trunk/doc/CMakeLists.txt
+++ b/SolidOpt/trunk/doc/CMakeLists.txt
@@ -13,7 +13,7 @@ if (DOXYGEN_FOUND)
   # This relevant when configuring just docs standalone. This is useful for 
   # doxygen to be able to display Generated on `date` for rXXX by Doxygen
   if (NOT SolidOpt_Revision)
-    include (../Version.cmake)
+    include (${CMAKE_MODULE_PATH}/Version.cmake)
   endif()
 
   configure_file(
